fixed jumpt arrows

--- a/_sass/_modules/_links.scss
+++ b/_sass/_modules/_links.scss
@@ -17,7 +17,10 @@
     opacity: 0;
     transition: .3s cubic-bezier(.34,.15,.31,.92);
     background-image: url(../assets/images/link-arrow-dark.svg);
-    background-position: center;
+    background-position: center right;
+    background-repeat-x: no-repeat;
+    background-size: 15px;
+    padding-left: 30px;
     top: calc(50% - 5px);
   }
   &:after {
@@ -53,6 +56,7 @@
     transform: scaleX(-1);
     filter: FlipH;
     -ms-filter: "FlipH";
+    padding-right: 30px;
   }
 
   &:after {
@@ -75,7 +79,8 @@
     height: 18px;
     right: 36px;
     top: calc(50% - 15px);
-    background-size: contain;
+    background-size: 30px;
+    padding-left: 60px;
   }
   &:after {
     right: 0;
@@ -100,7 +105,8 @@
       height: 27px;
       right: 54px;
       top: calc(50% - 23px);
-      background-size: contain;
+      background-size: 45px;
+      padding-left: 110px;
     }
     &:after {
       right: 0;
